@@ -3,6 +3,7 @@
 x.x:
 
 - added: option to allow group members to invite more members
+- added: Portuguese-Brazilian translation (thanks to brunovb)
 - fixed: crash when listing a forum topic of a hidden group
 - fixed: email invites are not cleaned up on register
 
